# BinaryCompare

./: CMakeLists.txt  Description.md
analyzer/: CMakeLists.txt
analyzer/src/: main.cpp
common/: config.h
loader/: CMakeLists.txt
loader/include/: AbstractManagerImpl.h  IPCManager.h  SocketManagerImpl.h
loader/src/: IPCManager.cpp  SocketManagerImpl.cpp  main.cpp
