CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (analyzer)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (COMMON_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../common)

SET (SOURCES
        ${SRC_DIR}/main.cpp)

INCLUDE_DIRECTORIES (${INCLUDE_DIR} ${COMMON_DIR})

ADD_DEFINITIONS (-D_WINSOCK_DEPRECATED_NO_WARNINGS)

ADD_EXECUTABLE (analyzer ${SOURCES})
TARGET_LINK_LIBRARIES (analyzer ws2_32)
